@@ -1,3 +1,11 @@
+2013-09-12  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/prg/compton.jl: added full featured integration
+	of the compton compositing manager
+
+	* lisp/sawfish/wm/user.jl: load sawfish.wm.prg.compton
+
+	* man/news.texi: updated
+
 2013-05-02  Vedat Hallac <vedat@hallac.net>
 	* lisp/sawfish/gtk/widget.jl: fix make-choice-item to properly support
 	crux theme settings
@@ -14,7 +22,7 @@
 2013-04-25  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* debian/changelog
 	* configure.in: bump version to 1.9.91 "Steam Train"
-	
+
 	* man/news.texi: update
 
 2013-04-16  Jose Antonio Ortega Ruiz <jao@gnu.org>
